# c-lisp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  builtin.c  builtin.h  data.c  data.h  environment.c  environment.h  error.h  eval.c  eval.h  print.c  print.h  repl.c  token.c  token.h
docs/: Makefile  requirements.txt
docs/source/: about.rst  conf.py  index.rst  reference.rst  stl.rst
include/: ast.h  builtin.h  common.h  error.h  parser.h  print.h  stl.h  types.h  utils.h
include/builtin/: bool.h  exception.h  fs.h  io.h  list.h  magic.h  math.h  number.h  string.h  syntactic.h
src/: ast.c  ast.h  builtin.c  builtin.h  env.c  environment.c  environment.h  error.h  eval.h  expr.c  print.c  print.h  repl.c  token.c  token.h  types.c  types.h  utils.c
src/ast/: apply.c  eval.c  read.c
src/builtin/: bool.c  comparison.c  conditionals.c  exception.c  fs.c  io.c  list.c  magic.c  math.c  number.c  ordering.c  string.c  syntactic.c  types.c
src/core/: env.c  expr.c  parser.c  print.c  types.c  utils.c
stl/: prelude.clisp  unittest.clisp
tests/: helper.c  helper.h  test.c  test_builtin_math.c  test_env.c  test_expr.c  test_types.c
tests/ast/: test_ast.c  test_builtin_comparison.c  test_builtin_conditionals.c  test_builtin_list.c  test_builtin_math.c  test_builtin_ordering.c
tests/builtin/: test_builtin_comparison.c  test_builtin_conditionals.c  test_builtin_exception.c  test_builtin_io.c  test_builtin_list.c  test_builtin_magic.c  test_builtin_math.c  test_builtin_number.c  test_builtin_ordering.c  test_builtin_syntactic.c  test_builtin_types.c
tests/stl/: bool.clisp  exception.clisp  list.clisp  math.clisp  number.clisp  prelude.clisp  string.clisp  syntactic.clisp
tests/unit/: helper.h  test.c  test_env.c  test_expr.c  test_types.c
tests/unit/ast/: test_ast.c  test_builtin_comparison.c  test_builtin_conditionals.c  test_builtin_math.c  test_builtin_ordering.c
tests/unit/builtin/: test_builtin_bool.c  test_builtin_exception.c  test_builtin_io.c  test_builtin_list.c  test_builtin_math.c  test_builtin_number.c  test_builtin_string.c  test_builtin_syntactic.c
